--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start-dev": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "build:tailwind": "npx tailwindcss -i ./src/styles/input.css -o ./dist/output.css --watch"
+    "build:tailwind": "npx tailwindcss -i ./src/styles/input.css -o ./dist/output.css --watch",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
+    "gh-pages": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "postcss": "^8.4.30",
     "postcss-loader": "^7.3.3",
